--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +8,16 @@
     </head>
 
     <body>
+        <div
+            style="
+                font-family: FlappyBird;
+                position: absolute;
+                left: -1000px;
+                visibility: hidden;
+            "
+        >
+            .
+        </div>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
